SERVER-17364 New API for save/restore cursor

Summary: Adapt Rocks to the new API for save/restore state introduced by https://github.com/mongodb/mongo/commit/b9d2e18ca68246e5d21ed42a846ff4094867f159

Test Plan:
Ran all the unit tests
Also ran jsCore tests

Reviewers: AaronFeldman

Reviewed By: AaronFeldman

Differential Revision: https://reviews.facebook.net/D42531