src/rocks_index_test.cpp
@@ -160,7 +160,7 @@ namespace mongo {
         ASSERT_EQ(cursor->seekExact(key2), IndexKeyEntry(key2, loc1));
         cursor->savePositioned();
         removeFromIndex(opCtx, sorted, {{key2, loc1}});
-        cursor->restore(opCtx.get());
+        cursor->restore();
         ASSERT_EQ(cursor->next(), forward ? IndexKeyEntry(key3, loc1) : IndexKeyEntry(key1, loc1));
         ASSERT_EQ(cursor->next(), boost::none);
     }
